--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
+    "@vercel/analytics": "^1.3.1",
     "ai": "^3.2.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
