--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.34",
+    "@ai-sdk/openai": "^0.0.38",
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
@@ -17,8 +17,8 @@
     "ai": "^3.2.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.400.0",
-    "next": "14.2.4",
+    "lucide-react": "^0.414.0",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-places-autocomplete": "^7.3.0",
